platform/security/kyverno-policies/disallow-latest-tag.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-latest-tag
spec:
  validationFailureAction: Enforce
  background: false
  rules:
    - name: require-image-tag
      match:
        any:
          - resources: { kinds: [Pod] }
      validate:
        message: "image tag must be specified and not ':latest'"
        pattern:
          spec:
            containers:
              - image: "!*:latest"
