platform/security/kyverno-policies/verify-images.yaml
apiVersion: kyverno.io/v2beta1
kind: ClusterPolicy
metadata:
  name: verify-our-images
spec:
  validationFailureAction: Enforce
  webhookTimeoutSeconds: 30
  rules:
    - name: check-signature
      match:
        any:
          - resources:
              kinds: [Pod]
              namespaces: [agent, ml, online-boutique]
      verifyImages:
        - imageReferences:
            - "*.dkr.ecr.*.amazonaws.com/athena/*"
          attestors:
            - entries:
                - keyless:
                    subject: "https://github.com/syedammarsuhail/athena/.github/workflows/build.yml@refs/heads/master"
                    issuer: "https://token.actions.githubusercontent.com"
